--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Discord webhook for Ko-fi donations",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
@@ -11,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "24.2.0",
+    "bad-words": "^4.0.0",
     "body-parser": "2.2.0",
     "discord-webhook-node": "^1.1.8",
     "discord.js": "^14.21.0",
